force-app/main/default/objects/GGW_Section__c/fields/Section_Details__c.field-meta.xml
<CustomField>
    <fullName>Section_Details__c</fullName>
    <description>Text describing this section and limits, rules to apply</description>
    <inlineHelpText>Text describing this section and limits, rules to apply</inlineHelpText>
    <label>Section Details</label>
    <type>TextArea</type>
</CustomField>