force-app/main/default/objects/GGW_Section__c/fields/Suggested__c.field-meta.xml
<CustomField>
    <fullName>Suggested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suggested</label>
    <type>Checkbox</type>
</CustomField>