force-app/main/default/objects/GGW_Section__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Suggested__c</columns>
    <columns>Recommended__c</columns>
    <columns>Language__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>